# methylsieve

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release.toml
.cargo/: config.toml
.github/workflows/: check.yml  deny.yml
benchmark-pipeline/: .gitignore  README.md  Snakefile  install.sh  pixi.toml  run.sh
benchmark-pipeline/config/: config.yaml  datasets.tsv  smoke.config.yaml  smoke.datasets.tsv  smoke.region.bed
benchmark-pipeline/workflow/scripts/: collate.py  host_info.py  parse_gnu_time.py  plot_benchmarks.py  score_conversion.py
dev/: neb_concordance.py
src/: buffer.rs  io_threading.rs  main.rs  mask.rs  mbias.rs  metrics.rs  plots.rs  raw_reader.rs  raw_writer.rs  record.rs  reference.rs  sam_reader.rs  sieve.rs  stats.rs
tests/: test_actions.rs  test_contexts.rs  test_control_contig.rs  test_count_tag.rs  test_decision.rs  test_diagnostics.rs  test_encoding.rs  test_fraction_threshold.rs  test_mbias_mask.rs  test_min_base_quality.rs  test_overlap.rs  test_pg_chain.rs  test_query_grouped_check.rs  test_reference.rs  test_soft_clip_and_trim.rs  test_stats.rs  test_strand.rs  test_template_aggregation.rs  test_template_ends.rs
tests/helpers/: mod.rs
